--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -469,7 +469,7 @@ header nav li:hover {
   left: initial;
   width: 100vw;
   height: 50vh;
-  z-index: 3;
+  z-index: 10;
   display: flex;
   align-items: center;
   align-content: "";
@@ -485,32 +485,42 @@ header nav li:hover {
 }
 @media screen and (max-width: 550px) {
   .doors_top {
-    font-size: 8.5714285714rem;
+    font-size: 7.4285714286rem;
   }
 }
 @media screen and (min-width: 550px) and (max-width: 820px) {
   .doors_top {
-    font-size: 10rem;
+    font-size: 8.6666666667rem;
   }
 }
 @media screen and (min-width: 820px) and (max-width: 1080px) {
   .doors_top {
-    font-size: 12rem;
+    font-size: 10.4rem;
   }
 }
 @media screen and (min-width: 1080px) {
   .doors_top {
-    font-size: 12rem;
+    font-size: 10.4rem;
   }
 }
 @media screen and (min-width: 1700px) {
   .doors_top {
-    font-size: 15rem;
+    font-size: 13rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .doors_top {
+    font-size: 4rem;
   }
 }
 .doors_top p {
   position: absolute;
   bottom: -20%;
+}
+@media screen and (max-width: 550px) {
+  .doors_top p {
+    bottom: -10%;
+  }
 }
 .doors_bottom {
   position: absolute;
@@ -520,7 +530,7 @@ header nav li:hover {
   left: initial;
   width: 100vw;
   height: 50vh;
-  z-index: 3;
+  z-index: 10;
   display: flex;
   align-items: center;
   align-content: "";
@@ -537,32 +547,42 @@ header nav li:hover {
 }
 @media screen and (max-width: 550px) {
   .doors_bottom {
-    font-size: 8.5714285714rem;
+    font-size: 7.4285714286rem;
   }
 }
 @media screen and (min-width: 550px) and (max-width: 820px) {
   .doors_bottom {
-    font-size: 10rem;
+    font-size: 8.6666666667rem;
   }
 }
 @media screen and (min-width: 820px) and (max-width: 1080px) {
   .doors_bottom {
-    font-size: 12rem;
+    font-size: 10.4rem;
   }
 }
 @media screen and (min-width: 1080px) {
   .doors_bottom {
-    font-size: 12rem;
+    font-size: 10.4rem;
   }
 }
 @media screen and (min-width: 1700px) {
   .doors_bottom {
-    font-size: 15rem;
+    font-size: 13rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .doors_bottom {
+    font-size: 4rem;
   }
 }
 .doors_bottom p {
   position: absolute;
   top: -20%;
+}
+@media screen and (max-width: 550px) {
+  .doors_bottom p {
+    top: -10%;
+  }
 }
 
 main .main_project {
@@ -618,7 +638,7 @@ main .main_project figure img {
   height: 100%;
   transform: translateX(400px);
 }
-@media screen and (min-width: 550px) and (max-width: 1080px) {
+@media screen and (max-width: 1080px) {
   main .main_project figure img {
     clip-path: none;
     height: 70%;
@@ -734,14 +754,21 @@ main .main_project .project_description button {
     padding: 1.2rem 6rem 1.2rem 6rem;
   }
 }
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 550px) {
   main .main_project .project_description button {
-    bottom: 0;
+    bottom: 10%;
     left: 10%;
     right: initial;
   }
 }
-@media screen and (max-width: 1700px) {
+@media screen and (min-width: 550px) and (max-width: 1080px) {
+  main .main_project .project_description button {
+    bottom: 25%;
+    left: 10%;
+    right: initial;
+  }
+}
+@media screen and (min-width: 1700px) {
   main .main_project .project_description button {
     bottom: 25%;
   }
@@ -776,6 +803,14 @@ main .main_project .project_description .btn_git {
   }
 }
 @media screen and (max-width: 550px) {
+  main .main_project .project_description .btn_git {
+    bottom: 10%;
+    right: 10%;
+    left: initial;
+    padding: 0.2rem;
+  }
+}
+@media screen and (min-width: 550px) and (max-width: 820px) {
   main .main_project .project_description .btn_git {
     bottom: 25%;
     right: 10%;
@@ -1090,7 +1125,13 @@ main .main_project .hide {
   animation: subNavKey 0.5s ease-out;
   transform-origin: center;
 }
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 550px) {
+  #about #subNav ul .active::after {
+    top: -2vh;
+    left: -2.5vw;
+  }
+}
+@media screen and (min-width: 550px) and (max-width: 1080px) {
   #about #subNav ul .active::after {
     top: -1.5vh;
     left: -2.5vw;
@@ -1124,6 +1165,7 @@ main .main_project .hide {
 @media screen and (max-width: 1080px) {
   #about .about {
     grid-template: 20vh 50vh/90vw;
+    margin-top: 5vw;
   }
 }
 #about #container_about_me {
@@ -1718,7 +1760,7 @@ main .main_project .hide {
 }
 @media screen and (max-width: 1080px) {
   #about form textarea {
-    margin: 6vh 5vw;
+    margin: 1vh 5vw 4vh 5vw;
     width: 80vw;
   }
 }
