--- a/src/client/assets/sass/pages/_project.scss
+++ b/src/client/assets/sass/pages/_project.scss
@@ -23,7 +23,7 @@ main {
             }
 
             img {
-                @media screen and (min-width: map-get($breakpoints, phone)) and (max-width: map-get($breakpoints, laptops)) {
+                @media screen and (max-width: map-get($breakpoints, laptops)) {
                     clip-path: none;
                     height: 70%;
                     margin: 20% 0;
@@ -67,13 +67,19 @@ main {
                 @include absolute($right: 10%, $bottom: 30%, $width: auto, $height: auto);
                 @include paddingSize(1.2rem, 6rem, 1.2rem, 6rem);
 
-                @media screen and (max-width: map-get($breakpoints, laptops)) {
-                    bottom: 0;
+                @media screen and (max-width: map-get($breakpoints, phone)) {
+                    bottom: 10%;
                     left: 10%;
                     right: initial;
                 }
 
-                @media screen and (max-width: map-get($breakpoints, desktops)) {
+                @media screen and (min-width: map-get($breakpoints, phone)) and (max-width: map-get($breakpoints, laptops)) {
+                    bottom: 25%;
+                    left: 10%;
+                    right: initial;
+                }
+
+                @media screen and (min-width: map-get($breakpoints, desktops)) {
                     bottom: 25%;
                 }
 
@@ -94,6 +100,13 @@ main {
                 @include paddingSize(1.2rem, 2rem, 1.2rem, 2rem);
 
                 @media screen and (max-width: map-get($breakpoints, phone)) {
+                    bottom: 10%;
+                    right: 10%;
+                    left: initial;
+                    padding: 0.2rem;
+                }
+
+                @media screen and (min-width: map-get($breakpoints, phone)) and (max-width: map-get($breakpoints, tablet)) {
                     bottom: 25%;
                     right: 10%;
                     left: initial;
